Fix: Mobile basket panel always starts below header, fits screen, flex layout, all elements visible

--- a/src/Basket.css
+++ b/src/Basket.css
@@ -39,7 +39,7 @@
         bottom: 0;
         width: 100vw;
         height: calc(100vh - 96px);
-        z-index: 2000;
+        z-index: 1050;
         display: flex;
         flex-direction: column;
         border-radius: 1rem 1rem 0 0;
